Code Cleanup and testing

--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Delicious Food for everyone, Get the desired food in minutes"
+    />
+    <meta
+      name="keywords"
+      content="Food, Swiggy, UberEat, FoodFire, Chetan Nada, Delicious Food"
+    />
+    <meta name="author" content="Akshay Nigam" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" defer src="./src/app.js"></script>
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="/src/img/favicon.png" type="image/x-icon" />
+    <title>Forkify | Delicious food for you</title>
   </head>
   <body>
     <div class="root"></div>
